--- a/project.config
+++ b/project.config
@@ -1,2 +1,6 @@
 [access]
 	inheritFrom = All-Projects
+[access "refs/heads/*"]
+	label-Code-Review = -2..+2 group slim_cancro
+	label-Verified = -1..+1 group slim_cancro
+	submit = group slim_cancro
