Squash the changes
Sepolicy is now back at full powwwweerrr!

cancro: remove commonized sepolicies

Change-Id: Iec3210f01144f81f5da2e3322ed99a6b1011411b
Signed-off-by: Joey Rizzoli <joey@cyanogenmoditalia.it>

cancro: cleanup overlay

Change-Id: I4f60030f410a87d1282b24443b67fc41ea63144d
Signed-off-by: Joey Rizzoli <joey@cyanogenmoditalia.it>

cancro: add misc to fstab

Change-Id: I91373627b9397860d89c4a87373ca5d94e623a77
Signed-off-by: Joey Rizzoli <joey@cyanogenmoditalia.it>

cancro: define nfc port

Change-Id: Ieadcc01dbf78e2e989ef5cd881ce113353feede0
Signed-off-by: Joey Rizzoli <joey@cyanogenmoditalia.it>

cancro: declare reserved size in userdata

Change-Id: I09781419c960eea3ea7302f7dfe116ee7b8785f6
Signed-off-by: Joey Rizzoli <joey@cyanogenmoditalia.it>

cancro: update cmdline

remove useless debug flag, and import miui changes

Change-Id: If530c79545c9b0b5a8314b33ab89a67a61007baa
Signed-off-by: Joey Rizzoli <joey@cyanogenmoditalia.it>

cancro: disable frp

Partition doesn't exist even in mi4
(wtf why is it in the stock miui fstab then??)

Change-Id: I2002fb08807584f341484baafdcec8844f21e190
Signed-off-by: Joey Rizzoli <joey@cyanogenmoditalia.it>

cancro: set bootdevice

Change-Id: I3e263baaa2fbaae367b160e547bcefcd51594231
Signed-off-by: Joey Rizzoli <joey@cyanogenmoditalia.it>

--- a/rootdir/root/init.target.rc
+++ b/rootdir/root/init.target.rc
@@ -38,7 +38,7 @@ on init
     setprop persist.sys.wfd.virtual 0
     # set logd.radio buffer size
     setprop persist.logd.size.radio "4M"
-    setprop persist.logd.prunelist "1000 1013"
+    setprop persist.logd.prunelist "1013"
 
 on fs
     mount_all fstab.qcom
@@ -47,18 +47,15 @@ on fs
     # these partition flashed on the device. Failure to mount any partition in fstab file
     # results in failure to launch late-start class.
 
-    wait /dev/block/platform/msm_sdcc.1/by-name/cache
-    mount ext4 /dev/block/platform/msm_sdcc.1/by-name/cache /cache nosuid nodev barrier=1
-
-    wait /dev/block/platform/msm_sdcc.1/by-name/persist
-    mount ext4 /dev/block/platform/msm_sdcc.1/by-name/persist /persist nosuid nodev barrier=1
+    wait /dev/block/bootdevice/by-name/persist
+    mount ext4 /dev/block/bootdevice/by-name/persist /persist nosuid nodev barrier=1
     restorecon_recursive   /persist
     mkdir /persist/data 0700 system system
     mkdir /persist/data/sfs 0700 system system
     mkdir /persist/data/tz 0700 system system
 
-    wait /dev/block/platform/msm_sdcc.1/by-name/modem
-    mount vfat /dev/block/platform/msm_sdcc.1/by-name/modem /firmware ro context=u:object_r:firmware_file:s0,shortname=lower,uid=1000,gid=1000,dmask=227,fmask=337
+    wait /dev/block/bootdevice/by-name/modem
+    mount vfat /dev/block/bootdevice/by-name/modem /firmware ro context=u:object_r:firmware_file:s0,shortname=lower,uid=1000,gid=1000,dmask=227,fmask=337
 
 on post-fs-data
     mkdir /data/tombstones 0771 system system
@@ -136,6 +133,11 @@ on boot
     chown system system /sys/bus/i2c/devices/2-004b/hover_from_flash
     chown system system /sys/devices/fda0c000.qcom,cci/1c.qcom,actuator/bu63163
     exec /system/bin/sh /system/bin/atmel_hover_tune.sh
+    # update foreground cpuset now that processors are up
+    write /dev/cpuset/foreground/cpus 0-3
+    write /dev/cpuset/foreground/boost/cpus 0-3
+    write /dev/cpuset/background/cpus 0
+    write /dev/cpuset/system-background/cpus 0-1
 
 # Dynamically modify golden_ref setting
 on property:persist.atmel.golden.enable=1
